# operations-software-netbox

./: .gitignore  .gitreview  CONTRIBUTING.md  README.md  SECURITY.md  base_requirements.txt  mkdocs.yml  pyproject.toml  requirements.txt  ruff.toml  upgrade.sh
.github/ISSUE_TEMPLATE/: 01-feature_request.yaml  02-bug_report.yaml  03-documentation_change.yaml  04-translation.yaml  05-housekeeping.yaml  06-deprecation.yaml  config.yml
.github/workflows/: ci.yml  close-incomplete-issues.yml  close-stale-issues.yml  lock-threads.yml  update-translation-strings.yml
docs/: introduction.md
docs/administration/: replicating-netbox.md
docs/configuration/: default-values.md  error-reporting.md  graphql-api.md  miscellaneous.md  plugins.md  remote-authentication.md  required-parameters.md  security.md  system.md
docs/customization/: custom-scripts.md
docs/development/: adding-models.md  application-registry.md  getting-started.md  release-checklist.md  style-guide.md  translations.md
docs/installation/: 1-postgresql.md  3-netbox.md  6-ldap.md  index.md  upgrading.md
docs/integrations/: graphql-api.md  rest-api.md
docs/release-notes/: index.md  version-4.1.md  version-4.2.md  version-4.3.md
netbox/: release.yaml
netbox/account/: views.py
netbox/circuits/: choices.py  constants.py  filtersets.py  search.py  urls.py  views.py
netbox/core/: apps.py  checks.py  choices.py  data_backends.py  exceptions.py  filtersets.py  jobs.py  plugins.py  signals.py  urls.py  utils.py  views.py
netbox/dcim/: base_filtersets.py  choices.py  constants.py  filtersets.py  (+5 more)
(+699 files in other folders)
